--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,10 +11,7 @@ artifacts:
   TENSORBOARD_ROOT_LOG_DIR: tensorboard_log_dir
   CALLBACKS_DIR: callbacks
 
-source_download_dirs:
-  - path_to_data_1
-  - path_to_data_1
-
-local_data_dirs:
-  - path_to_local_data_1
-  - path_to_local_data_2
+data:
+  source_url: "https://download.microsoft.com/download/3/E/1/3E1C3F21-ECDB-4869-8368-6DEBA77B919F/kagglecatsanddogs_3367a.zip"
+  local_dir: data
+  data_file: data.zip
