--- a/.gitignore
+++ b/.gitignore
@@ -140,6 +140,9 @@ configs/secrets.yaml
 # add your env folder here if its there
 mlruns/
 data.zip
-running_logs.log
+*.log
+*.docx
+*.txt
+PetImages/*
 
 
