--- a/conda.yaml
+++ b/conda.yaml
@@ -60,4 +60,6 @@ dependencies:
     - websocket-client==1.3.1
     - werkzeug==2.0.3
     - zipp==3.7.0
+    - Pillow==9.0.1
+    - tensorflow==2.8.0
 prefix: C:\INEURON\DL\MLFlow_cnn_app1\Mlflow-cnn-app\env
