--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-### dependency
+### dependency to be installed
 tqdm
 mlflow
 pandas
 numpy
 PyYAML
+Pillow
 tensorflow
-
 ### local packages -
 -e . # << uncomment this to install from setup.py
